--- a/.github/workflows/validate-api-doc.yml
+++ b/.github/workflows/validate-api-doc.yml
@@ -12,7 +12,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Deploy
       id: deploy
-      uses: moul/github-action@dev/moul/fix-action
+      uses: bump-sh/github-action@rename-id-into-doc
       with:
         doc: ${{ secrets.doc_id }}
         token: ${{ secrets.doc_token }}
