gitlab: Add a diff comment feature for Gitlab Merge Requests
Until we implement this in our CLI, this is an example
script (inspired by Memo Bank use case) to comment Merge Request with
a diff generated from Bump.

The script takes 3 parameters as input:
- 1. The specification file path
- 2. The bump slug (`BUMP_DOC_ID`)
- 3. The Bump token (`BUMP_TOKEN`)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,3 +30,12 @@ deploy_doc:
     - npm exec -- bump deploy bump.openapi.v3.yml
   only:
     - master
+
+diff_doc:
+  stage: test
+  script:
+    - ./.gitlab/diff-comment-mr.sh bump.openapi.v3.yml
+  only:
+    - merge_requests
+  except:
+    - master
