--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ before_script:
 validate_doc:
   stage: test
   script:
-    - npm exec -- bump deploy --dry-run bump.openapi.v3.yml
+    - npm exec -- bump deploy --dry-run "bump.openapi.v3.yml" --doc "$BUMP_ID" --token "$BUMP_TOKEN"
   only:
     - branches
   except:
@@ -37,14 +37,14 @@ validate_doc:
 deploy_doc:
   stage: deploy
   script:
-    - npm exec -- bump deploy bump.openapi.v3.yml
+    - npm exec -- bump deploy "bump.openapi.v3.yml" --doc "$BUMP_ID" --token "$BUMP_TOKEN"
   only:
     - main
 
 diff_doc:
   stage: test
   script:
-    - ./.gitlab/diff-comment-mr.sh bump.openapi.v3.yml
+    - sh ./.gitlab/diff-comment-mr.sh "bump.openapi.v3.yml" "$BUMP_ID" "$BUMP_TOKEN"
   only:
     - merge_requests
   except:
